--- a/index.html
+++ b/index.html
@@ -15,23 +15,25 @@
         less?
       </p>
       <div>
-        <input type="number" id="guess" min="1" max="99" />
+        <!-- <label for="guess">number between 1-99</label> -->
+        <input type="number" id="guess" min="1" max="99">
         <button id="submit">Submit Guess</button>
       </div>
       <div>
         <p class="message" id="number-of-guesses"></p>
         <p class="message" id="too-high">You guessed too high. Try again.</p>
         <p class="message" id="too-low">You guessed too low. Try again.</p>
-        <p class="message" id="max-guesses">
-          You reached the max number of guesses
-        </p>
+        <p class="message" id="max-guesses">You reached the max number of guesses</p>
+        <p class="message" id="greater">Number must be greater that 0</p>
+        <p class="message" id="less">Number must be less than 100</p>
         <p class="message" id="correct">
-          Congratulations, You guessed correctly! <br />
+          Congratulations, You guessed correctly! <br>
           Would you like to play again?
         </p>
       </div>
       <button id="reset">Reset</button>
     </main>
     <script src="index.js"></script>
+    
   </body>
 </html>
